added iclr paper

--- a/CV/jamiecv.tex
+++ b/CV/jamiecv.tex
@@ -153,6 +153,9 @@ Training Studentship, 2013
 Extensions and limitations of randomized smoothing for robustness guarantees\\
 J Hayes 06-2020 CVPR (workshop track)  
 
+A framework for robustness certfification of smoothed classifiers using f-divergences\\
+K Dvijotham, J Hayes, B Balle, Z Kolter, C Qin, A Gyorgy, K Xiao, S Gowal, P Kohli 05-2020 ICLR
+
 Towards transformation-resilient provenance detection of digital media\\
 J Hayes, K Dvijotham, Y Chen, S Dieleman, P Kohli, N Casagrande 09-2019  
 
