--- a/CV/jamiecv.tex
+++ b/CV/jamiecv.tex
@@ -153,7 +153,7 @@ Training Studentship, 2013
 Extensions and limitations of randomized smoothing for robustness guarantees\\
 J Hayes 06-2020 CVPR (workshop track)  
 
-A framework for robustness certfification of smoothed classifiers using f-divergences\\
+A framework for robustness certification of smoothed classifiers using f-divergences\\
 K Dvijotham, J Hayes, B Balle, Z Kolter, C Qin, A Gyorgy, K Xiao, S Gowal, P Kohli 05-2020 ICLR
 
 Towards transformation-resilient provenance detection of digital media\\
